--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langgraph>=0.6.6",
     "openai>=1.106.1",
     "pydantic>=2.11.7",
+    "pypdf>=6.0.0",
     "python-dotenv>=1.1.1",
     "requests>=2.32.5",
     "streamlit>=1.49.1",
